change seneca add filters to have system and action. Refactor auth handler to explicitly handle specified result types from passport. Auth handler arg builder refactored. Login model indexing added.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container-fluid">
-    <button id="twitterLogin" onclick="login()" class="btn btn-primary btn-lg" type="submit">Login via Twitter</button>
+    <button id="twitterLogin" onclick="login()" class="btn btn-primary btn-lg" type="submit">Login</button>
     <input class="form-control" id="status" type="text" disabled>
 </div>
 
