--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,14 @@
 </div>
 
 <script>
+    var popupRef = null;
+
     var login = function() {
         $('#twitterLogin').addClass('btn-disabled');
         $('#status').val('Requesting token...');
 
         var waitDataURI = "data:text/html;base64,PGh0bWw+PGJvZHk+PGgxIHN0eWxlPSJmb250LWZhbWlseTpoZWx2ZXRpY2E7dGV4dC1hbGlnbjpjZW50ZXI7Y29sb3I6I2FhYTtmb250LXNpemU6MTRweDsiPlBsZWFzZSBXYWl0Li4uPC9oMT48L2JvZHk+PC9odG1sPg==";
-        var popupRef = window.open(waitDataURI, 'twitter_login', "width=800,height=400,resizable,scrollbars=yes,status=1");
+        popupRef = window.open(waitDataURI, 'twitter_login', "width=800,height=400,resizable,scrollbars=yes,status=1");
 
         $.getJSON('/auth/twitter', function(data) {
             if (data.success) {
@@ -34,6 +36,9 @@
                     $('#twitterLogin').removeClass('btn-disabled');
                 }
             }
+        }).fail(function(jqxhr, status, error) {
+            $('#status').val('Login failed ' + (jqxhr.status?jqxhr.status:'') + ' ' + error);
+            popupRef.close();
         });
     };
 
@@ -61,8 +66,10 @@
                 $('#status').val('Login successful.');
             } else if (event.data === 'authTokenFailed') {
                 $('#status').val('Login failed.');
+                popupRef && popupRef.close && popupRef.close();
             } else {
                 $('#status').val('ERROR: Unknown postMessage: ' + event.data);
+                popupRef && popupRef.close && popupRef.close();
             }
         }
     }, false);
